# stray

./: .gitignore  Cargo.toml  README.md  install.sh  stray.toml.example
.github/workflows/: release.yml
src/: config.rs  departments.rs  event.rs  highlight.rs  link.rs  main.rs  markdown.rs  roles.rs  sandbox.rs  term.rs  ui.rs
src/formats/: minimax.rs  mod.rs  openai.rs  raw_xml.rs
src/tools/: bash.rs  edit.rs  mod.rs  read.rs  write.rs
