[package]
name = "stray"
version = "0.1.0"
edition = "2021"
description = "A living AI companion — autonomous, sovereign, with a heartbeat"
license = "MIT"

[[bin]]
name = "stray"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
inkjet = { version = "0.11", default-features = false, features = [
    "theme",
    "language-rust", "language-python", "language-javascript", "language-typescript",
    "language-bash", "language-go", "language-c", "language-cpp",
    "language-json", "language-toml", "language-html", "language-css",
    "language-yaml", "language-sql", "language-dockerfile", "language-plaintext",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
