[package]
name = "stray"
version = "0.1.0"
edition = "2021"
description = "A living AI companion — autonomous, sovereign, with a heartbeat"
license = "AGPL-3.0-only"

[[bin]]
name = "stray"
path = "src/main.rs"

[[bin]]
name = "nip17-test"
path = "src/nip17_test.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
inkjet = { version = "0.11", default-features = false, features = [
    "theme",
    "language-rust", "language-python", "language-javascript", "language-typescript",
    "language-bash", "language-go", "language-c", "language-cpp",
    "language-json", "language-toml", "language-html", "language-css",
    "language-yaml", "language-sql", "language-dockerfile", "language-plaintext",
] }
notify = { version = "8.2.0", features = ["macos_kqueue"] }

# NIP-17 test binary dependencies - matching Vector version
nostr-sdk = { version = "0.44.1", features = ["nip06", "nip44", "nip59"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true