[package]
name = "stray"
version = "0.3.1"
edition = "2021"
description = "A living AI companion — autonomous, sovereign, with a heartbeat"
license = "AGPL-3.0-only"

[[bin]]
name = "stray"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
inkjet = { version = "0.11", default-features = false, features = [
    "theme",
    "language-rust", "language-python", "language-javascript", "language-typescript",
    "language-bash", "language-go", "language-c", "language-cpp",
    "language-json", "language-toml", "language-html", "language-css",
    "language-yaml", "language-sql", "language-dockerfile", "language-plaintext",
] }
notify = { version = "8.2.0", features = ["macos_kqueue"] }
iroh = { version = "0.97", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"], optional = true }
rand = { version = "0.9", optional = true }

[features]
default = ["link"]
link = ["iroh", "tokio", "rand"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true